fixing layout issues

--- a/public/scss/_functions.scss
+++ b/public/scss/_functions.scss
@@ -23,7 +23,6 @@ $xl-screen: "(min-width: 1200px)";
 }
 
 @mixin flex(){
-  display: -webkit-flex;
   display: flex;
 }
 
